--- a/config/database.yml
+++ b/config/database.yml
@@ -23,8 +23,11 @@ default: &default
 
 development:
   <<: *default
-  url: <%= ENV["DATABASE_URL"] %>
-
+  url: ${{Postgres.DATABASE_URL}}
+  host: ${{Postgres.PGHOST}}
+  username: ${{Postgres.PGUSER}}
+  password: ${{Postgres.PGPASSWORD}}
+  port: ${{Postgres.PGPORT}}
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
