--- a/config/database.yml
+++ b/config/database.yml
@@ -23,11 +23,12 @@ default: &default
 
 development:
   <<: *default
-  url: ${{Postgres.DATABASE_URL}}
-  host: ${{Postgres.PGHOST}}
-  username: ${{Postgres.PGUSER}}
-  password: ${{Postgres.PGPASSWORD}}
-  port: ${{Postgres.PGPORT}}
+  url: postgresql://postgres:e0YGGqX0mCEQ6QORLyZe@containers-us-west-65.railway.app:6465/railway
+  database: railway
+  host: containers-us-west-65.railway.app
+  username: postgres
+  password: e0YGGqX0mCEQ6QORLyZe
+  port: 6465
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -60,8 +61,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  url: <%= ENV["DATABASE_URL"] %>
-
+  url: postgresql://postgres:e0YGGqX0mCEQ6QORLyZe@containers-us-west-65.railway.app:6465/railway
+  database: railway
+  host: containers-us-west-65.railway.app
+  username: postgres
+  password: e0YGGqX0mCEQ6QORLyZe
+  port: 6465
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -84,4 +89,9 @@ test:
 #
 production:
   <<: *default
-  url: <%= ENV["DATABASE_URL"] %>
+  url: postgresql://postgres:e0YGGqX0mCEQ6QORLyZe@containers-us-west-65.railway.app:6465/railway
+  database: railway
+  host: containers-us-west-65.railway.app
+  username: postgres
+  password: e0YGGqX0mCEQ6QORLyZe
+  port: 6465
