--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,11 +1,11 @@
 development:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: redis://default:YfvGNC4Tu7CQgQaYlTBS@containers-us-west-122.railway.app:6869
 
 test:
   adapter: test
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: <%= ENV.fetch("REDIS_URL") { "redis://default:YfvGNC4Tu7CQgQaYlTBS@containers-us-west-122.railway.app:6869" } %>
   channel_prefix: ruby_rails_postgres_production
